make heading text more readable, also fix if and else if statements to work properly

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ h1 {
   border-width: 10px;
   text-align: center;
   background-color: rgb(195, 182, 182);
-  color: white;
+  color: black;
 }
 
 
